Add tag display to models

--- a/sulleys/buildings/templates/buildings/building_detail.html
+++ b/sulleys/buildings/templates/buildings/building_detail.html
@@ -31,4 +31,9 @@
         </style>
     </div>
 {% endif %}
+
+{% for tag in object.tags.all %}
+    <span class="tag">{{ tag.name }}</span>
+{% endfor %}
+
 {% endblock %}
