Add filterable tags

--- a/sulleys/buildings/templates/buildings/building_detail.html
+++ b/sulleys/buildings/templates/buildings/building_detail.html
@@ -33,7 +33,9 @@
 {% endif %}
 
 {% for tag in object.tags.all %}
-    <span class="tag">{{ tag.name }}</span>
+    <a href="{% url 'list_by_tag' tag.slug %}">
+        <span class="tag">{{ tag.name }}</span>
+    </a>
 {% endfor %}
 
 {% endblock %}
