Add titles to pages

--- a/sulleys/buildings/templates/buildings/building_detail.html
+++ b/sulleys/buildings/templates/buildings/building_detail.html
@@ -1,6 +1,8 @@
 {% extends CMS_TEMPLATE %}
 {% load cms_tags %}
 
+{% block title %}{{ object.name }}{% endblock %}
+
 {% block content %}
 <h2>{% render_model object 'name' %}</h2>
 <img src="{{ object.main_image.url }}"
