Add spacing between house list

--- a/sulleys/buildings/templates/buildings/building_list.html
+++ b/sulleys/buildings/templates/buildings/building_list.html
@@ -10,6 +10,7 @@
  .building-container {
    display: inline-block;
    position: relative;
+   margin-top: 5px;
  }
  .overlay {
    position: absolute;
