--- a/sulleys/templates/base.html
+++ b/sulleys/templates/base.html
@@ -2,6 +2,17 @@
 <!doctype html>
 <html lang="en">
     <head>
+        {% if not debug %}
+          <!-- Global site tag (gtag.js) - Google Analytics -->
+          <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159331495-1"></script>
+          <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-159331495-1');
+          </script>
+        {% endif %}
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>
