--- a/sulleys/buildings/templates/buildings/building_detail.html
+++ b/sulleys/buildings/templates/buildings/building_detail.html
@@ -5,8 +5,10 @@
 
 {% block content %}
 <h2>{% render_model object 'name' %}</h2>
+{% if object.main_image %}
 <img src="{{ object.main_image | thumbnail_url:'detail_main' }}"
      alt="{{ object.name }}" \>
+{% endif %}
 
 <div>
     {% for sub_image in object.sub_images.all %}
