Convert static_placeholders to static_aliases

--- a/sulleys/templates/base.html
+++ b/sulleys/templates/base.html
@@ -1,4 +1,4 @@
-{% load cms_tags sekizai_tags %}
+{% load cms_tags sekizai_tags djangocms_alias_tags %}
 <!doctype html>
 <html lang="en">
     <head>
@@ -24,11 +24,11 @@
     <body>
         {% cms_toolbar %}
         <div class="container">
-            {% static_placeholder "header" %}
+            {% static_alias "header" %}
             {% block content %}
             {% placeholder "content" %}
             {% endblock %}
-            {% static_placeholder "footer" %}
+            {% static_alias "footer" %}
         </div>
         {% render_block "js" %}
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK" crossorigin="anonymous"></script>
