--- a/sulleys/buildings/templates/buildings/building_detail.html
+++ b/sulleys/buildings/templates/buildings/building_detail.html
@@ -7,13 +7,13 @@
 <h2>{% render_model object 'name' %}</h2>
 {% if object.main_image %}
 <img src="{{ object.main_image | thumbnail_url:'detail_main' }}"
-     alt="{{ object.name }}" \>
+     alt="{{ object.name }}" />
 {% endif %}
 
 <div>
     {% for sub_image in object.sub_images.all %}
     <img src="{{ sub_image.image | thumbnail_url:'detail_sub' }}"
-        width="200px" style="margin-top: 5px" \>
+        width="200px" style="margin-top: 5px" />
     {% endfor %}
 </div>
 
